dev/kustomize/end-user-ui/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: end-user-ui
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: end-user-ui
    helm.sh/chart: end-user-ui-0.1.0
  name: end-user-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: end-user-ui
      app.kubernetes.io/name: end-user-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: end-user-ui
        app.kubernetes.io/name: end-user-ui
    spec:
      containers:
      - image: gcr.io/engineering-devops/end-user-ui:fraasEndUserClient
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: end-user-ui
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
